# t1-lab-redes

./: Cargo.toml  README.md  client_tcp.py
src/: config.rs  lib.rs  main.rs
src/models/: message.rs  metadata.rs
src/network/: client.rs  mod.rs  server.rs  tcp.rs  tcp_client.rs  udp.rs
src/utilities/: enums.rs
