[package]
name = "t1-lab-redes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rand = "0.9.0-alpha.1"
bimap = "0.6.3"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tui = "0.19.0"
crossterm = "0.27.0"
